
namespace Sourse.Constants
{
    public class AnimationName
    {
        public const string Jump = "Jump";
        public const string DoubleJump = "DoubleJump";
        public const string IsGrounded = "IsGrounded";
        public const string HardFall = "HardFall";
        public const string Defeat = "Defeat";
    }
}
